--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "shop-backend",
   "version": "1.0.0",
-  "main": "server.js",
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.2.0",
-    "dotenv": "^16.0.3"
+    "express": "^4.18.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
 
