--- a/manifests/backend-deployment.yaml
+++ b/manifests/backend-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: shop-backend
-  namespace: default
+  namespace: finalproject-dev
 spec:
   replicas: 1
   selector:
@@ -14,17 +14,8 @@ spec:
         app: shop-backend
     spec:
       containers:
-      - name: backend
-        image: fk36dks/shop-backend:11
-        env:
-        - name: DB_HOST
-          value: "10.0.2.75"
-        - name: DB_USER
-          value: "shopuser"
-        - name: DB_PASS
-          value: "soldesk901!"
-        - name: DB_NAME
-          value: "shop"
-        ports:
-        - containerPort: 8080
+        - name: backend
+          image: fk36dks/shop-backend:latest
+          ports:
+            - containerPort: 5000   # 8080 대신 5000
 
